# tdtmassmapping

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: FindFFTW3.cmake  FindGMP.cmake  GetTDTBase.cmake  GetTravelTime.cmake  GetWavetomo.cmake  dependencies.cmake
data/: Bolshoi_7_clean_256.txt  config.json
include/: globalprop.hpp  log.hpp  logging.hpp  measurement_operators.hpp  mmobservations.hpp  proposals.hpp  utils.hpp  wavetree_prior_dfggd.h
plotting/: a520.py  final_wavetree.py  plot_coeff_summaries.py  plot_wavelets.py  plotting.py  test_utils.py  utils.py  wavetree.py
src/: birthprop.cpp  deathprop.cpp  globalprop.cpp  hierarchicalmodel.cpp  ks_inversion.cpp  leak.cpp  log.cpp  logging.cpp  massmapping.cpp  measurement_operators.cpp  mmobservations.cpp  postprocess.cpp  proposals.cpp  utils.cpp  valueprop.cpp  wavetree_prior_depth_full_generalised_gaussian.c  wavetree_prior_generalised_gaussian.c
tests/: CMakeLists.txt  test_ggd_prior.cpp  test_globalprop.cpp  test_mmobservations.cpp  test_proposals.cpp  test_utils.cpp  tests.cpp
